--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 		</nav>
 		<div class="vlt-offcanvas-menu__footer">
 			<!--Socials-->
-			<div class="vlt-offcanvas-menu__socials"><a class="vlt-social-icon vlt-social-icon--style-1" href="#"><i
+			<!-- <div class="vlt-offcanvas-menu__socials"><a class="vlt-social-icon vlt-social-icon--style-1" href="#"><i
 						class="lnir-facebook-filled"></i></a><a class="vlt-social-icon vlt-social-icon--style-1"
 					href="#"><i class="lnir-twitter-original"></i></a><a
-					class="vlt-social-icon vlt-social-icon--style-1" href="#"><i class="lnir-instagram"></i></a></div>
+					class="vlt-social-icon vlt-social-icon--style-1" href="#"><i class="lnir-instagram"></i></a></div> -->
 			<!--Copyright-->
 			<div class="vlt-offcanvas-menu__copyright">
 				<p>© 2023 Copyright.<br>All rights reserved.</p>
