Header menu bug fixing

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<!--Logo-->
 					<a class="vlt-navbar-logo" href="index.html"><img src="assets/img/ak-logo.svg" alt="AKR"></a>
 				</div>
-				<div class="vlt-navbar-inner--right">
+				<div class="vlt-navbar-inner--right d-none d-xl-block">
 					<div class="container">
 						<nav class="vlt-default-menu__navigation">
 							<!--Navigation-->
